.k8s/hello-world/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: main
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 1000m
              memory: 100Mi
            limits:
              cpu: 2000m
              memory: 200Mi
