.k8s/hello-world/4-ingress.yaml
# 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: nginx
  
  rules:
    - host: aada482ae939d430180f1feba4d11f49-899972468.us-west-2.elb.amazonaws.com
      http:
        paths:
          - path: /hello-world
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
